--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
+    <h3>heading changed</h3>
     <button id="myButton">Click Me</button>
     <script src="javascripts.js"></script>
 </body>
